--- a/frontend/templates/Officers/access_door.html
+++ b/frontend/templates/Officers/access_door.html
@@ -46,7 +46,7 @@
 
                 <div class="portlet light bordered access-information-result-container col-md-12 col-sm-12">
 
-                    <div class="col-md-12 col-sm-12 col-xs-12" ng-show="show==2">
+                    <div class="col-md-12 col-sm-12 col-xs-12" ng-show="show==3">
 
                         <div id="error-image" class="result-image"></div>
 
@@ -55,7 +55,7 @@
                     </div>
 
 
-                    <div class="col-md-12 col-sm-12 col-xs-12" ng-show="show==3">
+                    <div class="col-md-12 col-sm-12 col-xs-12" ng-show="show==2">
                         <h1 class="page-title green-font bold text-center font-30 " id="access_tittle">Vehículo registrado</h1>
                         <div class="col-md-12 col-sm-12 ">
                             <div id="success-car-image" class="result-image"></div>
@@ -68,15 +68,15 @@
                         </div>
                         <div class="col-md-5 col-sm-12  col-xs-12 no-padding">
                             <span class="access_car_information gray-font font-20 col-md-6 col-sm-7  col-xs-8 no-padding">Color:</span>
-                            <div class="col-lg-6 col-md-6 col-sm-4 col-xs-3 height-21-percent gray  img-circle" id="color-circle"> </div>
+                            <div class="col-lg-6 col-md-6 col-sm-4 col-xs-3 height-21-percent  img-circle" id="color-circle" style="background-color: {{color}}!important;"> </div>
                         </div>
                     </div>
 
 
-                    <div class="col-md-12 col-sm-12 col-xs-12" ng-show="show==1">
-                        <h1 class="page-title green-font bold text-center font-30 " id="access_tittle">Residente registrado</h1>
-                        <div class="center no-padding success-resident-image">
-                            <img src="http://www.qtem.org/files/attach/images/contact/5438/BVP%20profile%20sq%202.jpg" alt="" class="img-responsive img-rounded" />
+                    <div class="col-md-12 col-sm-12 col-xs-12 " ng-show="show==1 ">
+                        <h1 class="page-title green-font bold text-center font-30 " id="access_tittle ">Residente registrado</h1>
+                        <div class="center no-padding success-resident-image ">
+                            <img src="http://www.qtem.org/files/attach/images/contact/5438/BVP%20profile%20sq%202.jpg " alt=" " class="img-responsive img-rounded " />
                         </div>
                         <div class="height-5-percent col-md-12 col-sm-12 hidden-xs "></div>
                         <span class=" gray-font font-20 access_car_information col-md-12 col-sm-12 no-padding ">Nombre: Diego Barillas Valverde</span>
