--- a/frontend/templates/admin/house/index.html
+++ b/frontend/templates/admin/house/index.html
@@ -1,10 +1,9 @@
-
 <!-- SE REQUIERE EN CADA VISTA -->
 <div class="page-bar route-title">
     <ul class="page-breadcrumb">
         <li>
             <i class="fa fa-home"></i>
-            <a href="index.html">Condominio</a>
+            <a ui-sref="home()">Condominio</a>
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
@@ -25,27 +24,34 @@
 </div>
 <div class="row">
     <div class="col-md-12">
-                  <h3 class="page-title col-md-10">	Casas </h3>
-                      <input type="text" name="name" value="" ng-model="search" placeholder="Buscar residente" class="search-bar col-md-2">
-      						<div class="portlet-body ">
-      							<div class="table-scrollable ">
-      								<table class="table table-striped table-hover font-12">
-      								<thead>
-      								<tr>
-      									<th>Número</th>
-      							    <th>Extención</th>
-                        <th>Editar</th>
-                        <th>Eliminar</th>
-      								</tr>
-      								</thead>
-      								<tbody>
-                        <tr ng-repeat="house in houses | filter:search | orderBy:'name'" >
-                           <td>{{house.house_number}}</td>
+        <h3 class="page-title col-md-10">	Casas </h3>
+        <div class="form-group col-md-offset-7 col-md-3 ">
+            <div class="input-icon">
+                <i class="fa fa-search"></i>
+                <input type="text" class="form-control" placeholder="Buscar casa" ng-model="search">
+            </div>
+        </div>
+        <button type="submit" class="btn green col-md-2 small-margin-bottom" ui-sref="newHouse()">Registrar casa</button>
+
+        <div class="portlet-body ">
+            <div class="table-scrollable ">
+                <table class="table table-striped table-hover font-12">
+                    <thead>
+                        <tr>
+                            <th>Número</th>
+                            <th>Extención</th>
+                            <th>Editar</th>
+                            <th>Eliminar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="house in houses | filter:search | orderBy:'name'">
+                            <td>{{house.house_number}}</td>
                             <td>{{house.extension}}</td>
-                           <td> <a ui-sref="editHouse({id:house.id})">Editar</a></td>
-                           <td> <a ng-click="deleteHouse(house.id)">Eliminar</a></td>
-                         </tr>
-      								</tbody>
-      								</table>
-      							</div>
-      						</div>
+                            <td> <a ui-sref="editHouse({id:house.id})">Editar</a></td>
+                            <td> <a ng-click="deleteHouse(house.id)">Eliminar</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
