--- a/frontend/templates/admin/index.html
+++ b/frontend/templates/admin/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Homes | Page Layouts - Blank Page</title>
+	<title>Shield | Security is the future</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
@@ -20,8 +20,6 @@
 	<link rel="stylesheet" href="../../assets/global/plugins/bootstrap-toastr/toastr.min.css" media="screen" title="no title">
 	<!-- END GLOBAL MANDATORY STYLES -->
 	<!-- BEGIN THEME STYLES -->
-
-
 	<link href="../../assets/global/css/components.css" id="style_components" rel="stylesheet" type="text/css" />
 	<link href="../../assets/global/css/plugins.css" rel="stylesheet" type="text/css" />
 	<link href="../../assets/global/css/main.css" rel=" stylesheet " type="text/css " />
@@ -36,19 +34,13 @@
 	<link rel="shortcut icon " href="favicon.ico " />
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons " rel="stylesheet ">
 </head>
-<<<<<<< HEAD
-<div ui-view="login "></div>
-<div ui-view="access "></div>
-<div class="gray ">
-	<div id="rightView " ng-hide="$state.current.name=='login' || $state.current.name=='access' ">
-		<div ui-view="header " class="page-header-fixed page-quick-sidebar-over-content ">
-=======
+
 <div ui-view="login"></div>
 <div ui-view="access"></div>
 <div class="gray">
 	<div id="rightView" ng-hide="$state.current.name == 'login' || $state.current.name == 'access' || $state.current.name == 'changePassword'  || $state.current.name == 'requestPassword' ">
 		<div ui-view="header" class="page-header-fixed page-quick-sidebar-over-content">
->>>>>>> origin/master
+
 		</div>
 		<div class="page-container ">
 			<div ui-view="menu ">
@@ -65,11 +57,13 @@
 	</div>
 
 </div>
+
+
 <script src="../../assets/global/plugins/jquery.min.js " type="text/javascript "></script>
 <script src="../../assets/global/plugins/jquery-migrate.min.js " type="text/javascript "></script>
-<!-- IMPORTANT! Load jquery-ui.min.js before bootstrap.min.js to fix bootstrap tooltip conflict with jquery ui tooltip -->
-<<<<<<< HEAD
-<script src="../../assets/global/plugins/jquery-ui/jquery-ui.min.js " type="text/javascript "></script>
+
+
+<!-- <script src="../../assets/global/plugins/jquery-ui/jquery-ui.min.js " type="text/javascript "></script>
 <script src="../../assets/global/plugins/bootstrap/js/bootstrap.min.js " type="text/javascript "></script>
 <script src="../../assets/global/plugins/bootstrap-hover-dropdown/bootstrap-hover-dropdown.min.js " type="text/javascript "></script>
 <script src="../../assets/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js " type="text/javascript "></script>
@@ -77,7 +71,6 @@
 <script src="../../assets/global/plugins/jquery.cokie.min.js " type="text/javascript "></script>
 <script src="../../assets/global/plugins/uniform/jquery.uniform.min.js " type="text/javascript "></script>
 <script src="../../assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js " type="text/javascript "></script>
-<!-- END CORE PLUGINS -->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js "></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.min.js "></script>
 <script src="../../assets/global/scripts/metronic.js " type="text/javascript "></script>
@@ -88,12 +81,14 @@
 <script src="../../assets/global/scripts/usersFactory.js " type="text/javascript "></script>
 <script src="../../assets/global/scripts/usersControllers.js " type="text/javascript "></script>
 <script src="../../assets/global/scripts/houseController.js " type="text/javascript "></script>
-
 <script src="../../assets/global/scripts/vehiculeController.js " type="text/javascript "></script>
 <script src="../../assets/global/scripts/officerController.js " type="text/javascript "></script>
 <script src="../../assets/global/scripts/accessController.js " type="text/javascript "></script>
-<!-- <script src="../../assets/global/scripts/bootbox.min.js " type="text/javascript "></script> -->
-=======
+<script src="../../assets/global/scripts/bootbox.min.js " type="text/javascript "></script> -->
+
+
+
+
 <script src="../../assets/global/plugins/jquery-ui/jquery-ui.min.js" type="text/javascript"></script>
 <script src="../../assets/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="../../assets/global/plugins/bootstrap-hover-dropdown/bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
@@ -103,7 +98,6 @@
 <script src="../../assets/global/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
 <script src="../../assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
 <script src="../../assets/global/plugins/bootstrap-toastr/toastr.min.js"></script>
-<!-- END CORE PLUGINS -->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.min.js"></script>
 <script src="../../assets/global/scripts/metronic.js" type="text/javascript"></script>
@@ -119,12 +113,10 @@
 <script src="../../assets/global/scripts/officerController.js" type="text/javascript"></script>
 <script src="../../assets/global/scripts/accessController.js" type="text/javascript"></script>
 <script src="../../assets/global/scripts/bootbox.min.js" type="text/javascript"></script>
->>>>>>> origin/master
+
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js "></script>
-
-<!-- <script src="../../templates/admin/app.js " type="text/javascript "></script>
-<script src="../../templates/admin/residentController.js " type="text/javascript "></script> -->
 <script src="../../assets/admin/layout/scripts/layout.js " type="text/javascript "></script>
 <script src="../../assets/admin/layout/scripts/quick-sidebar.js " type="text/javascript "></script>
 <script src="../../assets/admin/layout/scripts/demo.js " type="text/javascript "></script>
