--- a/frontend/templates/admin/resident/new_resident.html
+++ b/frontend/templates/admin/resident/new_resident.html
@@ -4,7 +4,7 @@
     <ul class="page-breadcrumb">
         <li>
             <i class="fa fa-home"></i>
-            <a href="index.html">Condominio</a>
+            <a ui-sref="home()">Condominio</a>
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
@@ -29,77 +29,77 @@
 
         <!-- CONTENIDO EMPIEZA AQUI-->
         <form ng-submit="actionButton()">
-        <div class="portlet light bordered">
-            <div class="portlet-title">
-                <div class="caption font-green-haze">
-                    <i class="fa fa-user font-green-haze"></i>
-                    <span class="caption-subject bold uppercase">{{title}}</span>
+            <div class="portlet light bordered">
+                <div class="portlet-title">
+                    <div class="caption font-green-haze">
+                        <i class="fa fa-user font-green-haze"></i>
+                        <span class="caption-subject bold uppercase">{{title}}</span>
+                    </div>
+                    <div class="actions">
+                        <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title="">
+                        </a>
+                    </div>
                 </div>
-                <div class="actions">
-                    <a class="btn btn-circle btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title="">
-                    </a>
-                </div>
-            </div>
-            <div class="portlet-body form">
-                <form role="form">
-                    <div class="form-body">
+                <div class="portlet-body form">
+                    <form role="form">
+                        <div class="form-body">
 
-                        <h3 class="text-center"><img id="blah" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" alt="your image" width="200px" height="200px" class="img-circle"/></h3>
-                        <h3 class="text-center"><label for="imgInp"  class="btn default btn-file fileinput-new">Subir imagen</label></h3>
-                        <input type='file' id="imgInp"/>
+                            <h3 class="text-center"><img id="blah" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" alt="your image" width="200px" height="200px" class="img-circle"/></h3>
+                            <h3 class="text-center"><label for="imgInp"  class="btn default btn-file fileinput-new">Subir imagen</label></h3>
+                            <input type='file' id="imgInp" />
 
-                        <div class="col-md-6 marging-top-20" >
+                            <div class="col-md-6 marging-top-20">
 
-                          <div class="form-group form-md-line-input">
-                            <input ng-model="name" type="text" class="form-control" id="form_control_1" >
-                            <label for="form_control_1" class="font-15">Nombre</label>
-                          </div>
+                                <div class="form-group form-md-line-input">
+                                    <input ng-model="name" type="text" class="form-control" id="form_control_1">
+                                    <label for="form_control_1" class="font-15">Nombre</label>
+                                </div>
 
-                            <!-- <div class="form-group form-md-line-input form-md-floating-label">
+                                <!-- <div class="form-group form-md-line-input form-md-floating-label">
                                 <input   type="text" class="form-control" id="form_control_1" required title="Input required">
                                 <label for="form_control_1">Nombre</label>
                             </div> -->
 
-                            <div class="form-group form-md-line-input">
-                              <input ng-model="last_name" type="text" class="form-control" id="form_control_1" >
-                              <label for="form_control_1" class="font-15">Primer Apellido</label>
+                                <div class="form-group form-md-line-input">
+                                    <input ng-model="last_name" type="text" class="form-control" id="form_control_1">
+                                    <label for="form_control_1" class="font-15">Primer Apellido</label>
+                                </div>
+                                <div class="form-group form-md-line-input">
+                                    <input ng-model="second_last_name" type="text" class="form-control" id="form_control_1">
+                                    <label for="form_control_1" class="font-15">Segundo Apellido</label>
+                                </div>
+                                <div class="form-group form-md-line-input">
+                                    <input ng-model="identification_number" type="text" class="form-control" id="form_control_1">
+                                    <label for="form_control_1" class="font-15">Número de cédula</label>
+                                </div>
+
+
                             </div>
-                            <div class="form-group form-md-line-input">
-                              <input ng-model="second_last_name" type="text" class="form-control" id="form_control_1" >
-                              <label for="form_control_1" class="font-15">Segundo Apellido</label>
-                            </div>
-                            <div class="form-group form-md-line-input">
-                              <input ng-model="identification_number" type="text" class="form-control" id="form_control_1" >
-                              <label for="form_control_1" class="font-15">Número de cédula</label>
-                            </div>
 
+                            <div class="col-md-6 marging-top-20">
+                                <div class="form-group form-md-line-input">
+                                    <input ng-model="birthday" type="text" class="form-control date-picker" id="form_control_2" placeholder="">
+                                    <label for="form_control_1" class="font-15">Fecha de nacimiento</label>
+                                </div>
 
-                        </div>
-
-                        <div class="col-md-6 marging-top-20">
-                          <div class="form-group form-md-line-input">
-                            <input ng-model="birthday" type="text" class="form-control date-picker" id="form_control_2" placeholder="Ingresa una fecha">
-                            <label for="form_control_1">Fecha de nacimiento</label>
-                          </div>
-
-                          <!-- <div class="form-group form-md-line-input form-md-floating-label">
+                                <!-- <div class="form-group form-md-line-input form-md-floating-label">
                               <input ng-model="birthday" type="text" class="form-control date-picker" id="form_control_2" required title="Input required">
                               <label for="form_control_2">Fecha de nacimiento</label>
                           </div> -->
 
-                            <div class="form-group form-md-line-input">
-                                <input ng-focus="expression==1" ng-model="phone_number" type="text" placeholder="Ingresa una número" class="form-control" id="form_control_1">
-                                <label for="form_control_1">Número celular</label>
-                            </div>
-                            <div class="form-group form-md-line-input ">
-                                <input ng-model="email" type="email" class="form-control" placeholder="Ingresa una correo" id="form_control_1">
-                                <label for="form_control_1">Correo electrónico</label>
-                            </div>
-                            <div  class="form-group form-md-line-input has-info">
+                                <div class="form-group form-md-line-input">
+                                    <input ng-focus="expression==1" ng-model="phone_number" type="text" placeholder="" class="form-control" id="form_control_1">
+                                    <label for="form_control_1" class="font-15">Número celular</label>
+                                </div>
+                                <div class="form-group form-md-line-input ">
+                                    <input ng-model="email" type="email" class="form-control" placeholder="" id="form_control_1">
+                                    <label for="form_control_1" class="font-15">Correo electrónico</label>
+                                </div>
+                                <div class="form-group form-md-line-input has-info">
 
-                                  <select name="repeatSelect" class="form-control" ng-model="house"  ng-options="house.house_number for house in houses | orderBy: 'house_number' track by house.id" required>
+                                    <select name="repeatSelect" class="form-control" ng-model="house" ng-options="house.house_number for house in houses | orderBy: 'house_number' track by house.id" required>
                                   </select>
-                                <label for="form_control_1">Número de casa</label >
+                                    <label for="form_control_1" class="font-15">Número de casa</label >
                             </div>
 
                         </div>
@@ -120,8 +120,9 @@
     </div>
     <script type="text/javascript">
         $('.date-picker').datepicker({
-            format: 'mm/dd/yyyy',
-            language: "es"
+            format: 'dd-mm-yyyy',
+            language: "es",
+            autoclose: true
         });
 
         function readURL(input) {
@@ -131,7 +132,6 @@
                 reader.onload = function(e) {
                     $('#blah').attr('src', e.target.result);
                 }
-
                 reader.readAsDataURL(input.files[0]);
             }
         }
