--- a/frontend/templates/admin/vehicule/index.html
+++ b/frontend/templates/admin/vehicule/index.html
@@ -1,4 +1,3 @@
-
 <!-- SE REQUIERE EN CADA VISTA -->
 <div class="page-bar route-title">
     <ul class="page-breadcrumb">
@@ -25,29 +24,45 @@
 </div>
 <div class="row">
     <div class="col-md-12">
-                  <h3 class="page-title col-md-10">	Vehículos </h3>
-                      <input type="text" name="name" value="" ng-model="search" placeholder="Buscar residente" class="search-bar col-md-2">
-      						<div class="portlet-body ">
-      							<div class="table-scrollable ">
-      								<table class="table table-striped table-hover font-12">
-      								<thead>
-      								<tr>
-      									<th>Placa</th>
-      							    <th>Marca</th>
-                        <th>Número de casa</th>
-                        <th>Editar</th>
-                        <th>Eliminar</th>
-      								</tr>
-      								</thead>
-      								<tbody>
-                        <tr ng-repeat="vehicule in vehicules | filter:search | orderBy:'name'" >
+        <h3 class="page-title col-md-10">	Vehículos </h3>
+        <div class="form-group col-md-offset-4  col-md-3 no-padding">
+            <label class="col-md-5 control-label no-padding gray-font">Filtrar por casa</label>
+            <div class="col-md-7 no-padding">
+                <select name="repeatSelect" class="form-control  gray-font" ng-model="house" ng-options="house.house_number for house in houses | orderBy: 'house_number' track by house.id" required>
+
+            </select>
+
+            </div>
+        </div>
+        <div class="form-group  col-md-3 ">
+            <div class="input-icon">
+                <i class="fa fa-search"></i>
+                <input type="text" class="form-control" placeholder="Buscar vehículo" ng-model="search">
+            </div>
+        </div>
+        <button type="submit" class="btn green col-md-2 small-margin-bottom" ui-sref="newVehicule()">Registrar vehículo</button>
+
+        <div class="portlet-body ">
+            <div class="table-scrollable ">
+                <table class="table table-striped table-hover font-12">
+                    <thead>
+                        <tr>
+                            <th>Placa</th>
+                            <th>Marca</th>
+                            <th>Número de casa</th>
+                            <th>Editar</th>
+                            <th>Eliminar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="vehicule in vehicules | filter:search | orderBy:'name'">
                             <td>{{vehicule.license_plate}}</td>
                             <td>{{vehicule.brand}}</td>
                             <td>{{vehicule.house_id}}</td>
-                           <td> <a ui-sref="editVehicule({id:vehicule.id})">Editar</a></td>
-                           <td> <a ng-click="deleteVehicule(vehicule.id)">Eliminar</a></td>
-                         </tr>
-      								</tbody>
-      								</table>
-      							</div>
-      						</div>
+                            <td> <a ui-sref="editVehicule({id:vehicule.id})">Editar</a></td>
+                            <td> <a ng-click="deleteVehicule(vehicule.id)">Eliminar</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
