--- a/frontend/templates/admin/index.html
+++ b/frontend/templates/admin/index.html
@@ -100,6 +100,8 @@
 <script src="../../assets/global/plugins/bootstrap-toastr/toastr.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-cookies.min.js"></script>
+
 <script src="../../assets/global/scripts/metronic.js" type="text/javascript"></script>
 <script src="../../assets/global/scripts/popUp.js" type="text/javascript"></script>
 <script src="../../assets/global/scripts/app.js" type="text/javascript"></script>
@@ -130,6 +132,7 @@
 <script src="../../assets/global/scripts/bower_components/angular-route/angular-route.js "></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.min.js "></script>
 <script src="../../assets/global/scripts/bower_components/ng-token-auth/dist/ng-token-auth.js "></script>
+
 <!-- END JAVASCRIPTS -->
 
 <!-- END BODY -->
