--- a/frontend/templates/admin/resident/new_resident.html
+++ b/frontend/templates/admin/resident/new_resident.html
@@ -97,8 +97,11 @@
                                 </div>
                                 <div class="form-group form-md-line-input has-info">
 
-                                    <select name="repeatSelect" class="form-control" ng-model="house" ng-options="house.house_number for house in houses | orderBy: 'house_number' track by house.id" required>
+
+                                  <select class="form-control" data-ng-model="selectedOption" ng-options="house.house_number for house in houses | orderBy: 'house_number' track by house.house_number" required>
+                                  <option value="">Seleccione una casa</option>
                                   </select>
+
                                     <label for="form_control_1" class="font-15">Número de casa</label >
                             </div>
 
